@@ -376,7 +376,7 @@ FUN flist[] = {
 						CA_PUBLIC,	NULL},
 {"CEIL",	fun_ceil,	1,  0,		CA_PUBLIC,	NULL},
 {"CENTER",	fun_center,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
-{"CHILDREN",    fun_children,   1,  0,          CA_PUBLIC,	NULL},
+{"CHILDREN",    fun_children,   0,  FN_VARARGS, CA_PUBLIC,	NULL},
 {"CHOMP",	fun_chomp,	1,  0,		CA_PUBLIC,	NULL},
 {"CHOOSE",	fun_choose,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"CLEARVARS",	fun_clearvars,	0,  0,		CA_PUBLIC,	NULL},
@@ -445,8 +445,8 @@ FUN flist[] = {
 {"GET_EVAL",	perform_get,	1,  GET_EVAL,	CA_PUBLIC,	NULL},
 {"GRAB",	fun_grab,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"GRABALL",	fun_graball,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
-{"GREP",	perform_grep,	3,  GREP_EXACT,	CA_PUBLIC,	NULL},
-{"GREPI",	perform_grep,	3,  GREP_EXACT|REG_CASELESS,
+{"GREP",	perform_grep,	0,  FN_VARARGS|GREP_EXACT,	CA_PUBLIC,	NULL},
+{"GREPI",	perform_grep,	0,  FN_VARARGS|GREP_EXACT|REG_CASELESS,
 						CA_PUBLIC,	NULL},
 {"GT",		fun_gt,		2,  0,		CA_PUBLIC,	NULL},
 {"GTE",		fun_gte,	2,  0,		CA_PUBLIC,	NULL},
@@ -493,8 +493,8 @@ FUN flist[] = {
 {"LASTACCESS",	fun_lastaccess,	1,  0,		CA_PUBLIC,	NULL},
 {"LASTCREATE",	fun_lastcreate,	2,  0,		CA_PUBLIC,	NULL},
 {"LASTMOD",	fun_lastmod,	1,  0,		CA_PUBLIC,	NULL},
-{"LATTR",	handle_lattr,	1,  0,		CA_PUBLIC,	NULL},
-{"LCON",	fun_lcon,	1,  0,		CA_PUBLIC,	NULL},
+{"LATTR",	handle_lattr,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
+{"LCON",	fun_lcon,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"LCSTR",	fun_lcstr,	-1, 0,		CA_PUBLIC,	NULL},
 {"LDELETE",	fun_ldelete,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"LDIFF",	handle_sets,	0,  FN_VARARGS|SET_TYPE|SET_DIFF,
@@ -503,7 +503,7 @@ FUN flist[] = {
 {"LEFT",	fun_left,	2,  0,		CA_PUBLIC,	NULL},
 {"LET",		fun_let,	0,  FN_VARARGS|FN_NO_EVAL,
 						CA_PUBLIC,	NULL},
-{"LEXITS",	fun_lexits,	1,  0,		CA_PUBLIC,	NULL},
+{"LEXITS",	fun_lexits,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"LIST",	perform_iter,	0,  FN_VARARGS|FN_NO_EVAL|BOOL_COND_NONE|FILT_COND_NONE|LOOP_NOTIFY,
 						CA_PUBLIC}, 
 {"LIT",		fun_lit,	-1, FN_NO_EVAL,	CA_PUBLIC,	NULL},
@@ -522,14 +522,14 @@ FUN flist[] = {
 {"LOCALIZE",    fun_localize,   1,  FN_NO_EVAL, CA_PUBLIC,	NULL},
 {"LOCK",	fun_lock,	1,  0,		CA_PUBLIC,	NULL},
 {"LOG",		fun_log,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
-{"LPARENT",	fun_lparent,	1,  0,		CA_PUBLIC}, 
+{"LPARENT",	fun_lparent,	0,  FN_VARARGS,	CA_PUBLIC}, 
 {"LOOP",	perform_loop,	0,  FN_VARARGS|FN_NO_EVAL|LOOP_NOTIFY,
 						CA_PUBLIC,	NULL},
 {"LOR",		handle_logic,	0,  FN_VARARGS|LOGIC_LIST|LOGIC_OR,
 						CA_PUBLIC,	NULL},
 {"LORBOOL",	handle_logic,	0,  FN_VARARGS|LOGIC_LIST|LOGIC_OR|LOGIC_BOOL,
 						CA_PUBLIC,	NULL},
-{"LPOS",	fun_lpos,	2,  0,		CA_PUBLIC,	NULL},
+{"LPOS",	fun_lpos,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"LRAND",	fun_lrand,	0,  FN_VARARGS, CA_PUBLIC,	NULL},
 {"LSTACK",	fun_lstack,	0,  FN_VARARGS, CA_PUBLIC,	NULL},
 {"LSTRUCTURES",	fun_lstructures, 0, 0,		CA_PUBLIC,	NULL},
@@ -616,9 +616,9 @@ FUN flist[] = {
 						CA_PUBLIC,	NULL},
 {"REGRABI",	perform_regrab,	0,  FN_VARARGS|REG_CASELESS,
 						CA_PUBLIC,	NULL},
-{"REGREP",	perform_grep,	3,  GREP_REGEXP,
+{"REGREP",	perform_grep,	0,  FN_VARARGS|GREP_REGEXP,
 						CA_PUBLIC,	NULL},
-{"REGREPI",	perform_grep,	3,  GREP_REGEXP|REG_CASELESS,
+{"REGREPI",	perform_grep,	0,  FN_VARARGS|GREP_REGEXP|REG_CASELESS,
 						CA_PUBLIC,	NULL},
 {"REGMATCH",	perform_regmatch, 0, FN_VARARGS,
 						CA_PUBLIC,	NULL},
@@ -747,7 +747,7 @@ FUN flist[] = {
 						CA_PUBLIC,	NULL},
 {"WHERE",	fun_where,	1,  0,		CA_PUBLIC,	NULL},
 {"WHILE",	fun_while,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
-{"WILDGREP",	perform_grep,	3,  GREP_WILD,	CA_PUBLIC,	NULL},
+{"WILDGREP",	perform_grep,	0,  FN_VARARGS|GREP_WILD,	CA_PUBLIC,	NULL},
 {"WILDMATCH",	fun_wildmatch,	3,  0,		CA_PUBLIC,	NULL},
 {"WILDPARSE",	fun_wildparse,	3,  0,		CA_PUBLIC,	NULL},
 {"WIPE",	fun_wipe,	1,  0,		CA_PUBLIC,	NULL},
@@ -756,7 +756,7 @@ FUN flist[] = {
 {"WRITABLE",	fun_writable,	2,  0,		CA_PUBLIC,	NULL},
 {"WRITE",	fun_write,	2,  0,		CA_PUBLIC,	NULL},
 {"X",		fun_x,		1,  0,		CA_PUBLIC,	NULL},
-{"XCON",	fun_xcon,	3,  0,		CA_PUBLIC,	NULL},
+{"XCON",	fun_xcon,	0,  FN_VARARGS,	CA_PUBLIC,	NULL},
 {"XGET",	perform_get,	2,  GET_XARGS,	CA_PUBLIC,	NULL},
 {"XOR",		handle_logic,	0,  FN_VARARGS|LOGIC_XOR,
 						CA_PUBLIC,	NULL},
